--- a/Clinica_mvc/web/cadastrar.xhtml
+++ b/Clinica_mvc/web/cadastrar.xhtml
@@ -26,7 +26,7 @@
                     <h2>Dados Pessoais :</h2>
 
                     <p:outputLabel  value="Nome : *"/>
-                    <p:inputText value="#{paciente.nome}" required="true" requiredMessage="O nome é obrigatório"/>
+                    <p:inputText value="#{controllerPaciente.paciente.nome}" required="true" requiredMessage="O nome é obrigatório"/>
 
                     <p:outputLabel  value="Sobrenome : *"/>
                     <p:inputText value="#{paciente.sobrenome}" required="true" requiredMessage="O Sobrenome é obrigatório"/>
